[gd_scene load_steps=7 format=3 uid="uid://1yo5olfmic1q"]

[ext_resource type="Texture2D" uid="uid://c6da523ly6b7t" path="res://asset/Prlx2_Road-Jungle.png" id="1_ie6w7"]
[ext_resource type="Script" path="res://area/area.gd" id="1_o57k3"]
[ext_resource type="PackedScene" uid="uid://c71to8edu42an" path="res://player/Player.tscn" id="2_i5sog"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_viakg"]
size = Vector2(9002, 74.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4uvc"]
size = Vector2(88, 1319.38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewrrl"]
size = Vector2(135.375, 589.25)

[node name="Area3" type="Node2D"]
script = ExtResource("1_o57k3")

[node name="BG2" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG2"]
motion_scale = Vector2(0.1, 0.1)

[node name="Prlx2Road-jungle" type="Sprite2D" parent="BG2/ParallaxLayer"]
position = Vector2(1978, 284)
texture = ExtResource("1_ie6w7")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="BG2"]

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(4378, 633)
shape = SubResource("RectangleShape2D_viakg")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(8002, 558)
shape = SubResource("RectangleShape2D_q4uvc")

[node name="Go to World" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Go to World"]
position = Vector2(-88, 281)
shape = SubResource("RectangleShape2D_ewrrl")

[node name="player" parent="." instance=ExtResource("2_i5sog")]
position = Vector2(216, 505)
scale = Vector2(0.213, 0.213)

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2(-37.5587, 0)
zoom = Vector2(0.9, 0.9)
limit_left = 0
limit_right = 4000
limit_bottom = 732

[node name="Go to World2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Go to World2"]
position = Vector2(1674, 299)
shape = SubResource("RectangleShape2D_ewrrl")

[connection signal="body_entered" from="Go to World" to="." method="_on_go_to_world_body_entered"]
[connection signal="body_entered" from="Go to World2" to="." method="_on_go_to_world_2_body_entered"]
